# nandy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: CMakeLists.txt  circular_buffer.h  definitions.cpp  definitions.h  main.cpp  simulation.cpp  simulation.h  ui.cpp  ui.h  window.cpp  window.h
test/: CMakeLists.txt  basic_tests.h  circular_buffer_tests.h  compound_component_tests.h  gate_tests.h  main.cpp  speed_test.cpp
